Added cause registration form. Sends POST request to google-form API to update google forms.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1558,6 +1558,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-1 {
+	margin: 1rem 0 1rem 0;
 	padding-top: 2rem;
 	padding-bottom: 0.875rem;
 	background-color: #f7fcfd;
