Removed the contact us form. * Contact us form was commented out. * The map css was updated to be full width. * the div class was increased in order to take advantage of the page's full width.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2139,7 +2139,7 @@ a:hover.back-to-top {
 
 	/* Contact */
 	.form-2 .map-responsive {
-		max-width: 31rem;
+		/* max-width: 31rem; */
 		margin-right: auto;
 		margin-left: auto;
 	}
