homepage updated. mem. registration started

--- a/css/styles.css
+++ b/css/styles.css
@@ -671,6 +671,13 @@ input[type='checkbox'] {
 }
 
 /* Dropdown Menu */
+
+/*cjpg*/
+.dropdown-item.active {
+	background-color: #fff;
+}
+
+
 .navbar-custom .dropdown:hover > .dropdown-menu {
 	display: block; /* this makes the dropdown menu stay open while hovering it */
 	min-width: auto;
