Projects.html redesign, 2 new team head shots

--- a/css/styles.css
+++ b/css/styles.css
@@ -673,6 +673,7 @@ input[type='checkbox'] {
 /* Dropdown Menu */
 
 /*cjpg*/
+.dropdown-item:active,
 .dropdown-item.active {
 	background-color: #fff;
 }
