--- a/static/css/magnific-popup.css
+++ b/static/css/magnific-popup.css
@@ -7,8 +7,8 @@
   z-index: 1042;
   overflow: hidden;
   position: fixed;
-  background: #0b0b0b;
-  opacity: 0.8; }
+  background-color: rgb(10, 10, 10, 0.8);
+  }
 
 .mfp-wrap {
   top: 0;
