--- a/src/styles/fontawesome-all.css
+++ b/src/styles/fontawesome-all.css
@@ -4216,6 +4216,7 @@ readers do not read off random characters that represent icons */
     url('./webfonts/fa-brands-400.woff') format('woff'),
     url('./webfonts/fa-brands-400.ttf') format('truetype'),
     url('./webfonts/fa-brands-400.svg#fontawesome') format('svg');
+  font-display: swap;
 }
 
 .fab {
@@ -4231,6 +4232,7 @@ readers do not read off random characters that represent icons */
     url('./webfonts/fa-regular-400.woff') format('woff'),
     url('./webfonts/fa-regular-400.ttf') format('truetype'),
     url('./webfonts/fa-regular-400.svg#fontawesome') format('svg');
+  font-display: swap;
 }
 
 .far {
@@ -4247,6 +4249,7 @@ readers do not read off random characters that represent icons */
     url('./webfonts/fa-solid-900.woff') format('woff'),
     url('./webfonts/fa-solid-900.ttf') format('truetype'),
     url('./webfonts/fa-solid-900.svg#fontawesome') format('svg');
+  font-display: swap;
 }
 
 .fa,
